edit index footer layout

--- a/index.html
+++ b/index.html
@@ -226,19 +226,77 @@
 
   </main>
   
-  <footer>
-    <div class="flex-box">
-      <nav>
-        <h3>Dropbox</h3>
-        <ul>
-          <li>Applicazione</li>
-          <li>Perchè</li>
-          <li>Piani</li>
-          <li>Sicurezza</li>
-          <li>Funzioni</li>
-        </ul>
-      </nav>
+  <footer class="debug">
+    <div class="navbar">
+      <div class="flex-box debug">
+        <nav>
+          <h3>Dropbox</h3>
+          <ul>
+            <li>Applicazione</li>
+            <li>Perchè</li>
+            <li>Piani</li>
+            <li>Sicurezza</li>
+            <li>Funzioni</li>
+          </ul>
+        </nav>
+  
+        <nav>
+          <h3>Dropbox</h3>
+          <ul>
+            <li>Applicazione</li>
+            <li>Perchè</li>
+            <li>Piani</li>
+            <li>Sicurezza</li>
+            <li>Funzioni</li>
+          </ul>
+        </nav>
+  
+        <nav>
+          <h3>Dropbox</h3>
+          <ul>
+            <li>Applicazione</li>
+            <li>Perchè</li>
+            <li>Piani</li>
+            <li>Sicurezza</li>
+            <li>Funzioni</li>
+          </ul>
+        </nav>
+  
+        <nav>
+          <h3>Dropbox</h3>
+          <ul>
+            <li>Applicazione</li>
+            <li>Perchè</li>
+            <li>Piani</li>
+            <li>Sicurezza</li>
+            <li>Funzioni</li>
+          </ul>
+        </nav>
+  
+        <nav>
+          <h3>Dropbox</h3>
+          <ul>
+            <li>Applicazione</li>
+            <li>Perchè</li>
+            <li>Piani</li>
+            <li>Sicurezza</li>
+            <li>Funzioni</li>
+          </ul>
+        </nav>
+  
+        <nav>
+          <h3>Dropbox</h3>
+          <ul>
+            <li>Applicazione</li>
+            <li>Perchè</li>
+            <li>Piani</li>
+            <li>Sicurezza</li>
+            <li>Funzioni</li>
+          </ul>
+        </nav>
+      </div>
     </div>
+
 
 
 
