edit index header top fixed

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
           <nav>
             <ul class="flex-box">
               <li class="logo"><img src="./Assets/img/logo-small.png" alt=""></li>
-              <li>
-                <a class="top-link" href="#">Perchè Dropbox</a>
+              <li class="top-link">
+                <a  href="#">Perchè Dropbox</a>
               </li>
-              <li>
-                <a class="top-link" href="#">Funzioni</a>
+              <li class="top-link">
+                <a  href="#">Funzioni</a>
               </li>
-              <li>
-                <a class="top-link"  href="#">Piani e Prezzi</a>
+              <li class="top-link">
+                <a   href="#">Piani e Prezzi</a>
               </li>
             </ul>
           </nav>
@@ -41,14 +41,14 @@
         <div>
           <nav>
             <ul class="flex-box">
-              <li>
-                <a class="top-link" href="#">Supporto</a>
+              <li class="top-link">
+                <a  href="#">Supporto</a>
               </li>
-              <li>
-                <a class="top-link" href="#">Contatta l'ufficio vendite</a>
+              <li class="top-link">
+                <a  href="#">Contatta l'ufficio vendite</a>
               </li>
-              <li>
-                <a class="top-link" href="#">Accedi</a>
+              <li class="top-link">
+                <a  href="#">Accedi</a>
               </li>
               <li class="button">
                 <a href="#">Inizia</a>
