--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <!-- style -->
    <link rel="stylesheet" href="Assets/style/style.css">
 
+   <!-- font awesome -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 
 </head>
 
@@ -108,9 +111,9 @@
               <p>&euro; 12.00</p>
               <p>/mese</p>
               <ul>
-                <li>1 utente</li>
-                <li>5 TB spazio di archiviazione sicuro</li>
-                <li>funzioni di produttività premium e condivisione file semplice e sicura</li>
+                <li class="user">1 utente</li>
+                <li class="folder">5 TB spazio di archiviazione sicuro</li>
+                <li class="share">funzioni di produttività premium e condivisione file semplice e sicura</li>
               </ul>
               <button>prova gratis per 30 giorni</button>
               <p>oppure acquista ora</p>
@@ -118,8 +121,8 @@
 
               <h4>Punti salienti del piano</h4>
               <ul>
-                <li>Invia file fino a 100gb con Dropbox transfert</li>
-                <li>Cartelle offline per dispositivi mobili</li>
+                <li class="check">Invia file fino a 100gb con Dropbox transfert</li>
+                <li class="check">Cartelle offline per dispositivi mobili</li>
               </ul>
 
               </div>
