--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
               <li class="top-link">
                 <a  href="#">Accedi</a>
               </li>
-              <li class="button">
-                <a href="#">Inizia</a>
+              <li>
+                <a class="button" href="#">Inizia</a>
                 
               </li>
             </ul> 
@@ -78,6 +78,7 @@
             <span>
               <a class="button"href="#">Inizia qui la tua prova gratuita</a>
             </span>
+            
             <p>annulla in qualsiasi momento</p>
           </div>
           <div class="jumbo-right">
@@ -108,6 +109,7 @@
               <h6>singolo</h6>
               <div>
                 <h3>Professional</h3>
+
               <p>&euro; 12.00</p>
               <p>/mese</p>
               <ul>
@@ -115,7 +117,10 @@
                 <li class="folder">5 TB spazio di archiviazione sicuro</li>
                 <li class="share">funzioni di produttività premium e condivisione file semplice e sicura</li>
               </ul>
-              <button>prova gratis per 30 giorni</button>
+              <span>
+                <a class= "button"href="#">Prova gratis per 30 giorni</a>
+              </span>
+              <span class="line"></span>
               <p>oppure acquista ora</p>
 
 
