edit index commit card

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <div class="row flex-box">
 
             <div class="container card">
-              <h6>singolo</h6>
+              <h6><i class="fa-solid fa-user"></i> Singolo</h6>
               <div>
                 <h3>Professional</h3>
 
@@ -135,7 +135,7 @@
 
             </div>
             <div class="container card">
-              <h6>singolo</h6>
+              <h6>Singolo</h6>
               <h3>Advanced</h3>
               <p>12 euro</p>
               <p>mese</p>
