Edit index,css refine

--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
             </span>
             
             <p>annulla in qualsiasi momento</p>
+
+
+            <span class="anchor">
+              <a href="#Tabs"><i class="fa-solid fa-arrow-down"></i></a>
+
+            </span>
           </div>
           <div class="jumbo-right">
             <img src="./Assets/img/jumbo.png" alt="jumbotron">
@@ -95,7 +101,7 @@
   <main>
     <div class="container-main">
       <!-- piani business -->
-      <section>
+      <section id="Tabs">
         <h2>Trova il piano business che fa per te</h2>
       
         <div class="fatturazione">
@@ -110,8 +116,8 @@
               <div>
                 <h3>Professional</h3>
 
-                <p>&euro; 12.00</p>
-                <p>/mese</p>
+                <p class="price">&euro; 12.00</p>
+                <p class="frequency">/mese</p>
                 <ul>
                 <li class="user">1 utente</li>
                 <li class="folder">5 TB spazio di archiviazione sicuro</li>
@@ -144,8 +150,8 @@
               <div>
                 <h3>Advanced</h3>
 
-                <p>&euro; 18.00</p>
-               <p>/utente/mese</p>
+                <p class="price">&euro; 18.00</p>
+               <p class="frequency">/utente/mese</p>
                <ul>
                   <li class="users">3 o più utente</li>
                  <li class="folder">Tutto lo spazio di cui ha bisogno il tuo team </li>
@@ -182,8 +188,8 @@
               <div>
                 <h3>Enterprise</h3>
 
-                <p>Contattaci</p>
-                <p>-</p>
+                <p class="price">Contattaci</p>
+                <p class="frequency">-</p>
                 <ul>
                  <li class="user">10 o più utenti</li>
                  <li class="folder">Soluzioni personalizzabili per la tua Azienda</li>
@@ -238,7 +244,7 @@
           <div class="image"><img src="./Assets/img/partner.png" alt="partner"></div>
           <div class="partner">
             <h3>Entra in contatto con un partner Dropbox</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate eum qui nobis optio expedita soluta pariatur ullam reprehenderit rerum sapiente! Beatae fugit aspernatur modi facere voluptatibus deleniti quam minus quo!</p>
+            <p>Trova un partner Dropbox e Hellosign di fiducia. Ottieni le soluzioni ed i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
             <span><a class="button" href="#">Trova un partner</a></span>
   
           </div>
@@ -310,70 +316,61 @@
         <nav>
           <h3>Dropbox</h3>
           <ul>
-            <li>Applicazione</li>
-            <li>Perchè</li>
-            <li>Piani</li>
-            <li>Sicurezza</li>
-            <li>Funzioni</li>
+            <li><a href="#">Applicazione Desktop</a></li>
+            <li><a href="#">Perchè Discord</a></li>
+            <li><a href="#">Piani</a></li>
+            <li><a href="#">Sicurezza</a></li>
+            <li><a href="#">Funzioni</a></li>
           </ul>
         </nav>
   
         <nav>
-          <h3>Dropbox</h3>
+          <h3>Prodotti</h3>
           <ul>
-            <li>Applicazione</li>
-            <li>Perchè</li>
-            <li>Piani</li>
-            <li>Sicurezza</li>
-            <li>Funzioni</li>
+            <li><a href="#">Applicazione Desktop</a></li>
+            <li><a href="#">Perchè Discord</a></li>
+            <li><a href="#">Piani</a></li>
+            <li><a href="#">Sicurezza</a></li>
+            <li><a href="#">Funzioni</a></li>
           </ul>
         </nav>
-  
+
         <nav>
-          <h3>Dropbox</h3>
+          <h3>Azienda</h3>
           <ul>
-            <li>Applicazione</li>
-            <li>Perchè</li>
-            <li>Piani</li>
-            <li>Sicurezza</li>
-            <li>Funzioni</li>
+            <li><a href="#">Applicazione Desktop</a></li>
+            <li><a href="#">Perchè Discord</a></li>
+            <li><a href="#">Piani</a></li>
+            <li><a href="#">Sicurezza</a></li>
+            <li><a href="#">Funzioni</a></li>
           </ul>
         </nav>
-  
+
         <nav>
-          <h3>Dropbox</h3>
+          <h3>Supporto</h3>
           <ul>
-            <li>Applicazione</li>
-            <li>Perchè</li>
-            <li>Piani</li>
-            <li>Sicurezza</li>
-            <li>Funzioni</li>
+            <li><a href="#">Applicazione Desktop</a></li>
+            <li><a href="#">Perchè Discord</a></li>
+            <li><a href="#">Piani</a></li>
+            <li><a href="#">Sicurezza</a></li>
+            <li><a href="#">Funzioni</a></li>
           </ul>
         </nav>
-  
+
         <nav>
-          <h3>Dropbox</h3>
+          <h3>Community</h3>
           <ul>
-            <li>Applicazione</li>
-            <li>Perchè</li>
-            <li>Piani</li>
-            <li>Sicurezza</li>
-            <li>Funzioni</li>
+            <li><a href="#">Applicazione Desktop</a></li>
+            <li><a href="#">Perchè Discord</a></li>
+            <li><a href="#">Piani</a></li>
+            <li><a href="#">Sicurezza</a></li>
+            <li><a href="#">Funzioni</a></li>
           </ul>
         </nav>
-  
-        <nav>
-          <h3>Dropbox</h3>
-          <ul>
-            <li>Applicazione</li>
-            <li>Perchè</li>
-            <li>Piani</li>
-            <li>Sicurezza</li>
-            <li>Funzioni</li>
-          </ul>
-        </nav>
+
       </div>
       <span class="line"></span>
+      <span class="language">Italiano</span>
     </div>
 
 
